fix mobile nav footer positioning, improve mobile nav backdrop using z-index

--- a/styles/TopNav.scss
+++ b/styles/TopNav.scss
@@ -71,7 +71,7 @@ MOBILE NAV
   position: fixed;
   top: 0;
   right: 0;
-  height: 100%;
+  height: 100vh;
   width: 80%;
   background: $primary;
   transform: translateX(110%);
@@ -85,6 +85,7 @@ MOBILE NAV
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
   }
 
   li.nav-item:not(.crafted-by) {
@@ -123,7 +124,7 @@ MOBILE NAV
       color: $white;
       width: 100%;
       margin: 0 auto;
-      padding-bottom: 20px;
+      margin-bottom: 70px;
       padding-top: 10px;
     }
   }
@@ -135,9 +136,8 @@ MOBILE NAV - Overlay
 .TopNav-overlay {
   cursor: pointer;
   opacity: 0;
-  transform: translateY(-105%);
   position: fixed;
-  z-index: 1;
+  z-index: -1;
   width: 100vw;
   height: 100vh;
   top: 0;
@@ -146,6 +146,7 @@ MOBILE NAV - Overlay
   transition: opacity 0.3s ease-out;
 
   &.isOpen {
+    z-index: 1;
     opacity: 0.7;
     transform: translateY(0);
   }
